[package]
name = "jup_swap"
version = "0.3.3"
authors = []
edition = "2021"

[lib]
name = "jup_swap"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
rustler = "0.34.0"
base64 = "0.13"
bincode = "1"
reqwest = { version = "0.11", features = ["json","socks"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
solana-sdk = "2.1.4"
thiserror = "1"
spl-token = "3"
itertools = "0.10"
spl-associated-token-account = "1"
solana-client = "2.1.4"
solana-account-decoder = "2.1.4"
solana-transaction-status = "2.1.4"
num-traits = "0.2"
governor = "0.4.2"
nonzero_ext = "0.3.0"
parallel-stream = "2.1.3"
futures = "0.3.5"
csv = "1.2.1"
openssl = { version = "0.10", features = ["vendored"] }
anyhow = "1.0.75"
tower = { version = "0.4", features = ["full"] }
log = "0.4.20"
rand = "0.8.5"
solana-program = "2.1.4"
tokio = { version = "1.41.0", features = ["full"] }
async-std = { version = "1", features = ["attributes", "tokio1"] }
helius = "0.2.4"
solana-rpc-client-api = "2.1.4"

[dev-dependencies]
itertools = "0.10"
solana-client = "2.1.4"
spl-associated-token-account = "1"
spl-token = "3"
